upspoon/authorization-user/aws-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: upspoon-authorization-user
  name: upspoon-authorization-user
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: upspoon-authorization-user
  type: LoadBalancer
